--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-light navbar-expand-lg">
             <div class="container-lg">
                 <a class="navbar-brand p-0 m-0 me-4" href="#intro">
-                    <h5 id="h3" class="fw-bold p-0 m-0"><img height="40px" src="/Images/spiral.png" alt=""> gigaland
+                    <h5 id="h3" class="fw-bold p-0 m-0"><img height="40px" src="Images/spiral.png" alt=""> gigaland
                     </h5>
                 </a>
                 <form class="" role="search">
@@ -222,7 +222,7 @@
                                         style="width: 87%;">
                                         <div class="d-flex">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-1 (1).jpg" alt="">
+                                                src="Images/author-1 (1).jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div>
@@ -232,7 +232,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/static-1.jpg"
+                                    <img src="Images/static-1.jpg"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -264,7 +264,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-10.jpg" alt="">
+                                                src="Images/author-10.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div class="d-none">
@@ -274,7 +274,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/static-2.jpg"
+                                    <img src="Images/static-2.jpg"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -306,7 +306,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-11.jpg" alt="">
+                                                src="Images/author-11.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div>
@@ -316,7 +316,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/static-3.jpg"
+                                    <img src="Images/static-3.jpg"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -348,7 +348,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-12.jpg" alt="">
+                                                src="Images/author-12.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div class="d-none">
@@ -358,7 +358,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/static-4.jpg"
+                                    <img src="Images/static-4.jpg"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -392,7 +392,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-9.jpg" alt="">
+                                                src="Images/author-9.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div class="d-none">
@@ -402,7 +402,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/anim-4.webp"
+                                    <img src="Images/anim-4.webp"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -433,7 +433,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-2.jpg" alt="">
+                                                src="Images/author-2.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div>
@@ -443,7 +443,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/static-5.jpg"
+                                    <img src="Images/static-5.jpg"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -475,7 +475,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-3.jpg" alt="">
+                                                src="Images/author-3.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div class="d-none">
@@ -485,7 +485,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/static-6.jpg"
+                                    <img src="Images/static-6.jpg"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -516,7 +516,7 @@
                                         style="width: 87%;">
                                         <div class="">
                                             <img height="50px" class="rounded-circle img-profile border-light"
-                                                src="/Images/author-4.jpg" alt="">
+                                                src="Images/author-4.jpg" alt="">
                                             <i class="fa fa-check icon-check fw-bold text-light" aria-hidden="true"></i>
                                         </div>
                                         <div>
@@ -526,7 +526,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <img src="/Images/anim-5.webp"
+                                    <img src="Images/anim-5.webp"
                                         class="card-img-top rounded-3 img-fluid latest-image border-0" alt="...">
                                 </div>
                                 <div class="card-body p-0">
@@ -585,7 +585,7 @@
                                                 <i class="fa-solid fa-sm fa-chevron-left" style="color: #000000;"></i>
                                             </a>
                                         </div>
-                                        <img src="/Images/coll-1.jpg" class="feature-artist-img rounded-top-3"
+                                        <img src="Images/coll-1.jpg" class="feature-artist-img rounded-top-3"
                                             alt="...">
                                         <div class="fa-icon2 d-block d-sm-none">
                                             <a href="#" id="oki"
@@ -595,7 +595,7 @@
                                         </div>
                                         <div class="card-profile">
                                             <div class="faces1">
-                                                <img height="55px" src="/Images/author-1.jpg"
+                                                <img height="55px" src="Images/author-1.jpg"
                                                     class="rounded-circle border faces-img border-4 border-light"
                                                     alt="...">
                                             </div>
@@ -619,11 +619,11 @@
                                                 <i class="fa-solid fa-sm fa-chevron-right" style="color: #000000;"></i>
                                             </a>
                                         </div>
-                                        <img src="/Images/coll-2.jpg" class="feature-artist-img rounded-top-3"
+                                        <img src="Images/coll-2.jpg" class="feature-artist-img rounded-top-3"
                                             alt="...">
                                         <div class="card-profile">
                                             <div class="faces1">
-                                                <img height="55px" src="/Images/author-2.jpg"
+                                                <img height="55px" src="Images/author-2.jpg"
                                                     class="rounded-circle border faces-img border-4 border-light"
                                                     alt="...">
                                             </div>
@@ -642,11 +642,11 @@
                                     class="col-8 col-class d-none d-md-none d-lg-block col-sm-5 col-md-5 mb-3 col-lg-2">
                                     <div
                                         class="feature-card card d-flex rounded-3 justify-content-center text-center p-0 mb-2">
-                                        <img src="/Images/coll-3.jpg" class="feature-artist-img rounded-top-3"
+                                        <img src="Images/coll-3.jpg" class="feature-artist-img rounded-top-3"
                                             alt="...">
                                         <div class="card-profile">
                                             <div class="faces1">
-                                                <img height="55px" src="/Images/author-3.jpg"
+                                                <img height="55px" src="Images/author-3.jpg"
                                                     class="rounded-circle border faces-img border-4 border-light"
                                                     alt="...">
                                             </div>
@@ -665,11 +665,11 @@
                                     class="col-8 col-class d-none d-md-none d-lg-block col-sm-5 col-md-5 mb-3 col-lg-2">
                                     <div
                                         class="feature-card card d-flex rounded-3 justify-content-center text-center p-0 mb-2">
-                                        <img src="/Images/coll-4.jpg" class="feature-artist-img rounded-top-3"
+                                        <img src="Images/coll-4.jpg" class="feature-artist-img rounded-top-3"
                                             alt="...">
                                         <div class="card-profile">
                                             <div class="faces1">
-                                                <img height="55px" src="/Images/author-4.jpg"
+                                                <img height="55px" src="Images/author-4.jpg"
                                                     class="rounded-circle border faces-img border-4 border-light"
                                                     alt="...">
                                             </div>
@@ -694,11 +694,11 @@
                                                 <i class="fa-solid fa-sm fa-chevron-right" style="color: #000000;"></i>
                                             </a>
                                         </div>
-                                        <img src="/Images/coll-5.jpg" class="feature-artist-img rounded-top-3"
+                                        <img src="Images/coll-5.jpg" class="feature-artist-img rounded-top-3"
                                             alt="...">
                                         <div class="card-profile">
                                             <div class="faces1">
-                                                <img height="55px" src="/Images/author-5.jpg"
+                                                <img height="55px" src="Images/author-5.jpg"
                                                     class="rounded-circle border faces-img border-4 border-light"
                                                     alt="...">
                                             </div>
