--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
     <script src="scripts/bootstrap.bundle.min.js"></script>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/279c9c1a29.js"></script>
-    <script src="Practice 4.js"></script>
+    <!-- <script src="Practice 4.js"></script> -->
 
     <script>
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
